# simple

./: Makefile  README.md  claude.py  common.py  gemini.py  pyproject.toml
.dump/: 018b13b8-2dd7-11f1-995d-56d1fb07a0f1.json  27a85094-2e98-11f1-a2a6-8298f8d1e585.json  2d39aec0-2ddc-11f1-bb8d-56d1fb07a0f1.json  3f561e66-312b-11f1-b977-2a2c6f8f5263.json  44cffcbe-2ddd-11f1-b32a-56d1fb07a0f1.json  51018c86-3135-11f1-b3b2-2a2c6f8f5263.json  77c0ba70-3137-11f1-9b3c-2a2c6f8f5263.json  841ad870-3a28-11f1-992e-42010aa60fd6.json  8d31b806-3a24-11f1-93e3-42010aa60fd6.json  ad3ef7c8-52fa-11f1-8a46-42010aa60fd6.json  b23d50aa-2ea3-11f1-b692-ba2e061f9b43.json  c6bdd1f2-3138-11f1-9098-2a2c6f8f5263.json  ce6372d8-3735-11f1-9be0-d6b879f495d4.json  e70cca19-3a29-11f1-b5cd-42010aa60fd6.json  ebe827cc-2dd5-11f1-bee6-56d1fb07a0f1.json  f93b46a4-2dd8-11f1-b358-56d1fb07a0f1.json  fa3e0ec8-2dde-11f1-8ab6-56d1fb07a0f1.json
src/raw_llm/: claude.py  gemini.py  h2p.py
src/simple_llm/: claude.py  common.py
